ART 2.5.1
* Added Portuguese translation (thanks to Edson Richter)
* Added Spanish translation (thanks to Carlos Narvaez)
* Updated French translation (thanks to Eric Lemesre)
* Enable display of blank space instead of "null" for null fields (thanks to ckb)
* Fix for query name truncated to 25 characters
* Fix for start query not displaying
* Fix for invalid drill down queries link
* Fix for not being able to define email jobs in Italian and Portuguese locales
* Allow rename and move of queries from the query management console
* Allow xy chart to have multiple series
* Have show results inline as an application setting
* Enable show/hide of parameters box
* Allow specification of random start time for jobs 
* Made graph x-axis label rotate and remove options configurable per query
* Automatically compile all subreports in a jasper report
* Added field for uploading subreports used by a jasper report
* Updated jasperreports to 5.0.1

ART 2.5
* Fix for invalid publish job link on linux when reminder email specified
* Support for running DDL/DML statements before query's select statement
* Support for displaying a query in the start page
* Fix for non-ascii values not being saved properly in some admin pages (Thanks to Edson Richter)
* Renamed "Objects" to "Queries" and "Object Groups" to "Query Groups"
* Support for case sensitive operators for dynamic queries
* Allow use of decimals when specifying y axis range
* Support for archiving publish job results
* Removed published files retention period setting
* Allow scheduling of heat maps
* Allow use of default parameter values without specifying parameters in the url
* Allow dashboards to use multi parameters
* Moved some application settings from the web.xml file to the settings page

ART 2.4.1
* Support for bubble charts
* Support for heat map charts (experimental)
* Fix for chart tooltips not displaying when charts displayed inline
* Fix for issue preventing creation/modification of parameters in IE