@@ -33,6 +33,10 @@
         <filter-name>AuthFilterAdmin</filter-name>
         <filter-class>art.servlets.AuthFilterAdmin</filter-class>
     </filter>
+	<filter>
+		<filter-name>exportPathFilter</filter-name>
+		<filter-class>art.servlets.ExportPathFilter</filter-class>
+	</filter>
     <filter-mapping>
         <filter-name>AuthFilter</filter-name>
         <url-pattern>/user/*</url-pattern>
@@ -41,6 +45,10 @@
         <filter-name>AuthFilterAdmin</filter-name>
         <url-pattern>/admin/*</url-pattern>
     </filter-mapping>
+	<filter-mapping>
+		<filter-name>exportPathFilter</filter-name>
+		<url-pattern>/export/*</url-pattern>
+	</filter-mapping>
     <!-- Servlet definitions -->
     <servlet>
         <description>
